Fixed vertical alignment

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 .bubble {
 	width: 225px;
 	margin: 10px;
-	display: inline-block;
+	display: inline-table;
 }
 
 .bubble > .title {
